# flashDB-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: kvdb_basic.rs  kvdb_types.rs  tsdb_basic.rs
src/: crc32.rs  db.rs  def.rs  error.rs  flash.rs  kvdb.rs  lib.rs  status.rs  storage.rs  tsdb.rs
tests/: kvdb.rs  recovery.rs  smoke.rs  tsdb.rs
